force-app/zurich-base/main/default/objects/AccountTeamMember/fields/NotificationsOnPlans__c.field-meta.xml
<CustomField>
    <fullName>NotificationsOnPlans__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Dicta si se enviarán notificaciones para el par usuario y mediador</description>
    <label>Recibir Alertas Plan Comercial</label>
    <type>Checkbox</type>
</CustomField>